import {StyleSheet} from 'react-native';

export default StyleSheet.create({
  input: {
    width: 300,
    marginBottom: 5,
  },
  errorMessage: {
    color: 'red',
  },
  errorContainer: {
    height: 30,
  },
});
