import * as React from 'react';
import {View} from 'react-native';
import {Text} from 'react-native-paper';

const HomeScreen = () => {
  return (
    <View>
      <Text accessibilityLabel="HomeScreen">Home screen</Text>
    </View>
  );
};

export default HomeScreen;
